[package]
name = "zbus-lifetime-issue"
version = "0.1.0"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
zbus = {git = "https://gitlab.freedesktop.org/dbus/zbus", branch = "main"}
zvariant = {git = "https://gitlab.freedesktop.org/dbus/zbus", branch = "main", features = ["enumflags2"]}
zvariant_derive = {git = "https://gitlab.freedesktop.org/dbus/zbus", branch = "main"}
serde_repr = "0.1"
futures-lite = "1.12"

